--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-typescript": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "@vue/runtime-core": "^3.5.8",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vue": "^8.7.1",
     "sass": "^1.79.3",
-    "sass-loader": "^16.0.2"
+    "sass-loader": "^16.0.2",
+    "typescript": "^5.6.2"
   },
   "eslintConfig": {
     "root": true,
